<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_startup"
        android:title="@string/settings_behavior_category_startup"
        android:icon="@drawable/ic_power_settings_new_24"
        android:defaultValue="true">

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="start_on_boot"
            android:title="@string/settings_start_on_boot"
            android:summary="@string/settings_start_on_boot_summary"
            android:icon="@drawable/ic_power_settings_new_24" />

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="watchdog"
            android:summary="@string/settings_watchdog_summary"
            android:title="@string/settings_watchdog"
            android:icon="@drawable/ic_visibility_24" />

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="auto_reconnect_mdns"
            android:title="@string/settings_auto_reconnect_mdns"
            android:summary="@string/settings_auto_reconnect_mdns_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_server_restart" />

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="device_hardening_enabled"
            android:title="@string/settings_device_hardening"
            android:summary="@string/settings_device_hardening_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_shield_24" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_network_activity"
        android:title="@string/settings_behavior_category_network_activity"
        android:icon="@drawable/ic_lan_24"
        android:defaultValue="true">

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="tcp_mode"
            android:title="@string/settings_tcp_mode"
            android:icon="@drawable/ic_adb_24"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="tcp_port"
            android:title="@string/settings_tcp_port"
            android:icon="@drawable/ic_lan_24"
            android:inputType="number"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="tcp_port_randomize"
            android:title="@string/settings_tcp_randomize_port"
            android:summary="@string/settings_tcp_randomize_port_summary"
            android:icon="@drawable/ic_refresh_24" />

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="tcp_auto_close_port"
            android:title="@string/settings_tcp_auto_close_port"
            android:summary="@string/settings_tcp_auto_close_port_summary"
            android:icon="@drawable/ic_shield_24" />

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="auto_disable_usb_debugging"
            android:title="@string/settings_auto_disable_usb_debugging"
            android:summary="@string/settings_auto_disable_usb_debugging_summary"
            android:icon="@drawable/ic_warning_24" />

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="live_activity_enabled"
            android:title="@string/settings_live_activity"
            android:summary="@string/settings_live_activity_summary"
            android:icon="@drawable/ic_bolt_24"
            android:defaultValue="true" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

</PreferenceScreen>
